update feature #3145, create a REST service to produce RSS JSON response